tests/SyntaxError/Test14/test14.c
int main(){

int a = func(1;5);
return 2*a;

}


int func(int a, int b){
return a*b;
}
